Moj-compatible package-info.javas